# clickable_template

./: cookiecutter.json
{{cookiecutter.project_name}}/: clickables.py
{{cookiecutter.project_name}}/bootstrap/: bootstrap.sh  pyproject.toml
