[tool.poetry]
name = "{{cookiecutter.module_name}}"
# this is a fake/unused version
version = "0.1.0"
description = ""
authors = ["{{cookiecutter.full_name}} <{{cookiecutter.email}}>"]

[tool.poetry.dependencies]
python = ">=3.5"
clickable = { git = "https://github.com/lalmeras/clickable.git", branch = "master" }

[tool.poetry.dev-dependencies]

[tool.poetry.scripts]
{{cookiecutter.command_name}} = "clickable.click:main"

[build-system]
requires = ["poetry>=0.12"]
build-backend = "poetry.masonry.api"


